Fix menu width on mobile version

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -246,3 +246,10 @@
     display: none;
   }
 }
+
+
+@media (max-width: 576px) {
+  .main-nav {
+    width: 94%;
+  }
+}
